--- a/kaza/config.yaml
+++ b/kaza/config.yaml
@@ -1,5 +1,5 @@
 name: Kaza
-version: v0.1.0
+version: v0.1.1
 slug: kaza
 description: Kaza is a web-based, self-hosted solution for comprehensive household management. Organize your life with features like budgeting, meal planning, recipe management, inventory tracking, shopping lists, and chore scheduling. Keep everything under control while maintaining your privacy with this efficient and customizable tool for your home.
 url: https://github.com/juli3nk/kaza
@@ -12,7 +12,7 @@ host_network: true
 ingress: true
 ingress_port: 8514
 apparmor: false
-panel_icon: mdi:home-outlet
+panel_icon: mdi:home-outline
 panel_title: Kaza
 panel_admin: false
 uart: false
