--- a/kaza-presence-tracker-freebox/config.json
+++ b/kaza-presence-tracker-freebox/config.json
@@ -1,7 +1,7 @@
 {
-  "name": "Presence Tracker",
-  "version": "0.1.2",
-  "slug": "presence-tracker",
+  "name": "Kaza Presence Tracker Freebox",
+  "version": "v0.3.0",
+  "slug": "kaza-presence-tracker-freebox",
   "description": "Track smartphone connected to network through the Freebox",
   "uart": true,
   "url": "https://github.com/juli3nk/hassio-addons/tree/main/presence-tracker",
@@ -11,18 +11,16 @@
   ],
   "arch": [
     "aarch64",
-    "amd64",
-    "armhf",
-    "armv7"
+    "amd64"
   ],
   "boot": "auto",
   "init": false,
   "ingress": false,
   "timeout": 30,
   "map": [
-    "share:rw",
-    "config:rw"
+    "data:rw"
   ],
+  "image": "ghcr.io/juli3nk/presence-tracker",
   "schema": {
     "CONFIG_LOCATION": "str",
     "debug": "bool",
